--- a/onix-web/src/styles/size.css
+++ b/onix-web/src/styles/size.css
@@ -1,17 +1,17 @@
-.percent-100-w {
+.pc-100-w {
   width: 100%;
 }
 
-.percent-100-h {
+.pc-100-h {
   height: 100%;
 }
 
-.percent-100-wh {
+.pc-100-wh {
   width: 100%;
   height: 100%;
 }
 
-.percent-30-w {
+.pc-30-w {
   width: 30%;
 }
 
