add gui framwork

--- a/onix-web/src/app/gui/generator/generator.component.html
+++ b/onix-web/src/app/gui/generator/generator.component.html
@@ -1,3 +1,13 @@
-<p>
-  generator works!
-</p>
+<nz-layout>
+  <nz-header>
+    <onix-generator-header></onix-generator-header>
+  </nz-header>
+  <nz-layout>
+    <nz-sider [nzWidth]="50">
+      <onix-generator-sidebar></onix-generator-sidebar>
+    </nz-sider>
+    <nz-content>
+      <onix-generator-content></onix-generator-content>
+    </nz-content>
+  </nz-layout>
+</nz-layout>
