add monaco editor

--- a/onix-web/src/app/gui/generator/content/content.component.html
+++ b/onix-web/src/app/gui/generator/content/content.component.html
@@ -1,3 +1,8 @@
-<p>
-  content works!
-</p>
+<!-- <nz-tabset [nzTabPosition]="'top'" [nzType]="'card'">
+  <nz-tab *ngFor="let tab of tabs" [nzTitle]="tab">
+  </nz-tab>
+</nz-tabset>
+<ngx-monaco-editor style="height: 100%" [options]="editorOptions" [(ngModel)]="code"></ngx-monaco-editor> -->
+
+<onix-generator-editor-tabs></onix-generator-editor-tabs>
+<onix-generator-editor></onix-generator-editor>
