--- a/onix-web/src/app/gui/generator/sidebar/sidebar.component.html
+++ b/onix-web/src/app/gui/generator/sidebar/sidebar.component.html
@@ -1,3 +1,3 @@
-<div class="container" fxLayout="column" fxLayoutAlign="center center">
+<div class="container" fxLayout="column" fxLayoutAlign="start center">
   <button nz-button nzType="default" nzShape="circle"><i nz-icon nzType="setting" nzTheme="fill"></i></button>
 </div>
